--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -43,9 +43,10 @@
   transform: translate(-50%, -50%);
   color: white;
   border: none;
-  padding: 10px;
+  padding: 30px;
   border-radius: 20px;
-  background-color: #383838;
+  width: 50vh;
+  background-color: #212529;
 }
 
 .main ol {
@@ -134,7 +135,7 @@
 }
 
 .rectangle {
-  background-color: black;
+  background-color: #212529;
   padding: 10px;
   border-radius: 20px;
 }
