--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,7 +37,7 @@
 
     cursor: pointer;
     padding: 0.7em 1em;
-    border-radius: 0.5em;
+    border-radius: 0em;
     min-height: 2.4em;
     min-width: 3em;
     display: flex;
@@ -206,6 +206,10 @@
     background-color: #212529;
     padding: 10px;
     border-radius: 20px;
+}
+
+.panel {
+    height: 15em;
 }
 
 /* Enable hover only on non-touch devices */
