--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -28,65 +28,6 @@
     }
 }
 
-/* From Uiverse.io by milegelu */
-.button {
-    --bezier: cubic-bezier(0.22, 0.61, 0.36, 1);
-    --edge-light: hsla(0, 0%, 50%, 0.8);
-    --text-light: rgba(255, 255, 255, 0.4);
-    --back-color: 240, 40%;
-
-    cursor: pointer;
-    padding: 0.7em 1em;
-    border-radius: 0em;
-    min-height: 2.4em;
-    min-width: 3em;
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
-
-    font-size: 18px;
-    letter-spacing: 0.05em;
-    line-height: 1;
-    font-weight: bold;
-
-    background: linear-gradient(
-        140deg,
-        hsla(var(--back-color), 50%, 1) min(2em, 20%),
-        hsla(var(--back-color), 50%, 0.6) min(8em, 100%)
-    );
-    color: hsla(0, 0%, 90%);
-    border: 0;
-    box-shadow: inset 0.4px 1px 4px var(--edge-light);
-
-    transition: all 0.1s var(--bezier);
-}
-
-.button:hover {
-    --edge-light: hsla(0, 0%, 50%, 1);
-    text-shadow: 0px 0px 10px var(--text-light);
-    box-shadow:
-        inset 0.4px 1px 4px var(--edge-light),
-        2px 4px 8px hsla(0, 0%, 0%, 0.295);
-    transform: scale(1.1);
-}
-
-.button:active {
-    --text-light: rgba(255, 255, 255, 1);
-
-    background: linear-gradient(
-        140deg,
-        hsla(var(--back-color), 50%, 1) min(2em, 20%),
-        hsla(var(--back-color), 50%, 0.6) min(8em, 100%)
-    );
-    box-shadow:
-        inset 0.4px 1px 8px var(--edge-light),
-        0px 0px 8px hsla(var(--back-color), 50%, 0.6);
-    text-shadow: 0px 0px 20px var(--text-light);
-    color: hsla(0, 0%, 100%, 1);
-    letter-spacing: 0.1em;
-    transform: scale(1);
-}
-
 .dropdown {
     margin-left: 1358px;
     margin-top: 1750px;
@@ -101,6 +42,8 @@
     flex-direction: column;
     gap: 32px;
     grid-row-start: 2;
+    align-items: center;
+    text-align: center;
 }
 
 .newevent {
@@ -137,44 +80,6 @@
     padding: 2px 4px;
     border-radius: 4px;
     font-weight: 600;
-}
-
-.ctas {
-    display: flex;
-    gap: 16px;
-}
-
-.ctas a {
-    appearance: none;
-    border-radius: 128px;
-    height: 48px;
-    padding: 0 20px;
-    border: none;
-    border: 1px solid transparent;
-    transition:
-        background 0.2s,
-        color 0.2s,
-        border-color 0.2s;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 500;
-}
-
-.primary {
-    background: var(--background);
-    color: var(--foreground);
-    border: none;
-    border-radius: 100px;
-    padding: 10px;
-}
-
-.secondary {
-    border-color: var(--gray-alpha-200);
-    min-width: 180px;
 }
 
 .footer {
