--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,6 +37,12 @@
     text-align: center;
 }
 
+.topbar {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -109,7 +115,7 @@
 
 .rectangle {
     background-color: #212529;
-    padding: 10px;
+    padding: 20px;
     border-radius: 20px;
 }
 
