changed the way the events are stored in localStorage, events now are stored under the events key to avoid conflicts with other keys

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,7 @@
     padding: 80px;
     gap: 64px;
     font-family: var(--font-geist-sans);
-    background-image: url("assets/silvester.jpeg");
+    background-image: url("assets/purple.jpg");
 }
 
 @media (prefers-color-scheme: dark) {
